--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">= 12.0.0"
   },
   "scripts": {
-    "build": "esbuild cli.js --bundle --platform=node --target=node12 --outfile=dist/cli.js"
+    "build": "esbuild cli.js --bundle --platform=node --target=node12 --outfile=dist/cli.js --banner:js='#!/usr/bin/env node'"
   },
   "name": "@zeph1rus/nginx-config-scaffold",
   "author": "Jon Truran <jon@9600bps.net> (https://9600bps.net)",
