--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+http/
 
 package-lock.json
 
@@ -83,7 +84,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+dist/cli.js
 
 # Gatsby files
 .cache/
