--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node": ">= 12.0.0"
   },
   "scripts": {
-    "build": "esbuild cli.js --bundle --platform=node --target=node12 --outfile=dist/cli.js --banner:js='#!/usr/bin/env node'"
+    "build": "esbuild cli.js --bundle --platform=node --target=node12 --outfile=dist/cli.js --banner:js='#!/usr/bin/env node'",
+    "test": "jest ./lib"
   },
   "name": "@zeph1rus/nginx-config-scaffold",
   "author": "Jon Truran <jon@9600bps.net> (https://9600bps.net)",
@@ -25,6 +26,8 @@
   },
   "repository": "github:zeph1rus/nginx-config-scaffold",
   "devDependencies": {
-    "esbuild": "^0.17.17"
+    "@jest/globals": "^29.5.0",
+    "esbuild": "^0.17.17",
+    "jest": "^29.5.0"
   }
 }
