--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+.idea
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+confdir/conf.d/http/
 
 package-lock.json
 
@@ -83,7 +85,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+dist/cli.js
 
 # Gatsby files
 .cache/
